crates/strider-analyze/tests/snapshots/v3__mips32be__control__select_three.snap
---
source: crates/strider-analyze/tests/v3_baseline.rs
assertion_line: 177
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v2" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v2" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v3" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v3" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "5" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v6" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "5" -> "v6" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v7" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "5" -> "v7" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "v3" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "8" -> "5" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "9" [label="Region", shape=invhouse, fillcolor="#2a1a4a"];
  "v7" -> "9" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v6" -> "9" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "10" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "9" -> "10" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "11" -> "10" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "12" -> "10" [color="#88cc88", label=v0, fontcolor="#cccccc", fontsize=9];
  "13" -> "10" [color="#88cc88", label=v1, fontcolor="#cccccc", fontsize=9];
  "14" -> "10" [color="#88cc88", label=f0, fontcolor="#cccccc", fontsize=9];
  "15" -> "10" [color="#88cc88", label=f2, fontcolor="#cccccc", fontsize=9];
  "15" [label="init\nf2", shape=Mdiamond, fillcolor="#1a3a5c"];
  "14" [label="init\nf0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "13" [label="init\nv1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "12" [label="φ v0", shape=house, fillcolor="#163030"];
  "9" -> "12" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "16" -> "12" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "17" -> "12" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "17" [label="init\na1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "16" [label="init\na2", shape=Mdiamond, fillcolor="#1a3a5c"];
  "11" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "8" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "18" -> "8" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "19" -> "8" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "19" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "18" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "20" -> "18" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "21" -> "18" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "21" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "20" [label="init\na3", shape=Mdiamond, fillcolor="#1a3a5c"];
  "22" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "v2" -> "22" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "11" -> "22" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "23" -> "22" [color="#88cc88", label=v0, fontcolor="#cccccc", fontsize=9];
  "13" -> "22" [color="#88cc88", label=v1, fontcolor="#cccccc", fontsize=9];
  "14" -> "22" [color="#88cc88", label=f0, fontcolor="#cccccc", fontsize=9];
  "15" -> "22" [color="#88cc88", label=f2, fontcolor="#cccccc", fontsize=9];
  "23" [label="init\na0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "4" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "20" -> "4" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "24" -> "4" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "24" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
}
